[gd_scene load_steps=6 format=3 uid="uid://cex5s60djt5bo"]

[ext_resource type="PackedScene" uid="uid://kc76ip2ryepj" path="res://assets/summoner.aseprite" id="1_m04x0"]
[ext_resource type="Script" path="res://entities/summoner.gd" id="1_si4ei"]
[ext_resource type="PackedScene" uid="uid://3ojowfa83thw" path="res://entities/progress_bar.tscn" id="3_irxwf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cofyy"]
radius = 6.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rnq5i"]
radius = 18.0

[node name="Summoner" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_si4ei")

[node name="SummonerSprite" parent="." instance=ExtResource("1_m04x0")]
position = Vector2(0, -7)
animation = &"Summoning"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cofyy")

[node name="ProgressBar" parent="." instance=ExtResource("3_irxwf")]
position = Vector2(0, -27)

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_rnq5i")

[node name="Camera2D" type="Camera2D" parent="."]
